--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,16 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/01-header.html"></include>
+    <main>
+      <include src="./partials/02-hero.html"></include>
+      <include src="./partials/03-products.html"></include>
+      <include src="./partials/04-about.html"></include>
+      <include src="./partials/05-advantages.html"></include>
+      <include src="./partials/06-gallery.html"></include>
+      <include src="./partials/07-reviews.html"></include>
+      <include src="./partials/08-contacts.html"></include>
+    </main>
+    <include src="./partials/09-footer.html"></include>
   </body>
 </html>
