--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -26,5 +30,7 @@
       <include src="./partials/08-contacts.html"></include>
     </main>
     <include src="./partials/09-footer.html"></include>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script type="module" src="./swiper.js"></script>
   </body>
 </html>
