--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="./css/simple-lightbox.min.css" />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -33,5 +34,11 @@
     <include src="./partials/09-footer.html"></include>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script type="module" src="./swiper.js"></script>
+    <script src="./simple-lightbox.min.js"></script>
+    <script>
+      var lightbox = new SimpleLightbox('.gallery a', {
+        /* options */
+      });
+    </script>
   </body>
 </html>
