updated main branch

--- a/src/index.html
+++ b/src/index.html
@@ -29,16 +29,17 @@
       <include src="./partials/05-advantages.html"></include>
       <include src="./partials/06-gallery.html"></include>
       <include src="./partials/07-reviews.html"></include>
-      <include src="./partials/08-contacts.html"></include>
+      <!-- <include src="./partials/08-contacts.html"></include> -->
     </main>
-    <include src="./partials/09-footer.html"></include>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module" src="./swiper.js"></script>
+    <!-- <include src="./partials/09-footer.html"></include> -->
+    <script src="./menu.js"></script>
     <script src="./simple-lightbox.min.js"></script>
     <script>
       var lightbox = new SimpleLightbox('.gallery a', {
         /* options */
       });
     </script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script type="module" src="./swiper.js"></script>
   </body>
 </html>
