--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
       <include src="./partials/05-advantages.html"></include>
       <include src="./partials/06-gallery.html"></include>
       <include src="./partials/07-reviews.html"></include>
-      <!-- <include src="./partials/08-contacts.html"></include> -->
+      <include src="./partials/08-contacts.html"></include>
     </main>
-    <!-- <include src="./partials/09-footer.html"></include> -->
+    <include src="./partials/09-footer.html"></include>
     <script src="./menu.js"></script>
     <script src="./simple-lightbox.min.js"></script>
     <script>
