--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/tomik23/show-more@1.1.4/dist/css/show-more.min.css"
@@ -37,6 +38,10 @@
     </main>
     <include src="./partials/09-footer.html"></include>
     <script src="./menu.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/gh/tomik23/show-more@1.1.4/dist/js/showMore.min.js"></script>
     <script>
       new ShowMore('.products__subtext');
