header and hero fix

--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,14 @@
     <include src="./partials/01-header.html"></include>
     <main>
       <include src="./partials/02-hero.html"></include>
-      <!-- <include src="./partials/03-products.html"></include>
+      <include src="./partials/03-products.html"></include>
       <include src="./partials/04-about.html"></include>
       <include src="./partials/05-advantages.html"></include>
-      <include src="./partials/06-gallery.html"></include> -->
-      <!-- <include src="./partials/07-reviews.html"></include>
-      <include src="./partials/08-contacts.html"></include> -->
+      <include src="./partials/06-gallery.html"></include>
+      <include src="./partials/07-reviews.html"></include>
+      <include src="./partials/08-contacts.html"></include>
     </main>
-    <!-- <include src="./partials/09-footer.html"></include> -->
+    <include src="./partials/09-footer.html"></include>
     <script src="./menu.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
