--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       <include src="./partials/08-contacts.html"></include>
     </main>
     <include src="./partials/09-footer.html"></include>
-    <script src="./menu.js"></script>
+    <script src="./js/menu.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
@@ -46,13 +46,14 @@
     <script>
       new ShowMore('.products__subtext');
     </script>
-    <script src="./simple-lightbox.min.js"></script>
+    <script src="./js/imple-lightbox.min.js"></script>
     <script>
       var lightbox = new SimpleLightbox('.gallery a', {
         /* options */
       });
     </script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module" src="./swiper.js"></script>
+    <script type="module" src="./js/swiper.js"></script>
+    <script type="module" src="./js/modal.js"></script>
   </body>
 </html>
