--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
@@ -46,7 +46,7 @@
     <script>
       new ShowMore('.products__subtext');
     </script>
-    <script src="./js/imple-lightbox.min.js"></script>
+    <script src="./js/simple-lightbox.min.js"></script>
     <script>
       var lightbox = new SimpleLightbox('.gallery a', {
         /* options */
