--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
     <script src="https://cdn.jsdelivr.net/gh/tomik23/show-more@1.1.4/dist/js/showMore.min.js"></script>
     <script>
       new ShowMore('.products__subtext');
+      new ShowMore('.hero__infotext');
     </script>
     <script src="./js/simple-lightbox.min.js"></script>
     <script>
