--- a/src/index.html
+++ b/src/index.html
@@ -56,5 +56,6 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script type="module" src="./js/swiper.js"></script>
     <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/scroll.js"></script>
   </body>
 </html>
